--- a/GlobalShaderPlugin.uplugin
+++ b/GlobalShaderPlugin.uplugin
@@ -2,10 +2,10 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "BRPlugins",
+	"FriendlyName": "GlobalShaderPlugin",
 	"Description": "",
 	"Category": "Other",
-	"CreatedBy": "bluerose",
+	"CreatedBy": "Ken",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
@@ -15,7 +15,7 @@
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "BRPlugins",
+			"Name": "KenGlobalShader",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
 		}
