added an editor module

--- a/GlobalShaderPlugin.uplugin
+++ b/GlobalShaderPlugin.uplugin
@@ -18,6 +18,11 @@
 			"Name": "KenGlobalShader",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
+		},
+		{
+			"Name": "EdImageExporter",
+			"Type": "Editor",
+			"LoadingPhase": "PostEngineInit"
 		}
 	]
 }
